# books_catalog

./: db.sqlite3  pyproject.toml
books/: admin.py  models.py  views.py
books/migrations/: 0001_initial.py
config/: settings.py
static/css/: style.css
templates/books/: book_detail.html  book_list.html
